--- a/index.html
+++ b/index.html
@@ -14,10 +14,7 @@ hr {color: Green; border-top:dashed; width:50%; height:5px;}
 
 <body>
   <p>Hello Dear Code Green</p>
-  <a href=""></a>
-  <a href="https://www.google.co.in/"> <img src="F:\ALL PHOTOS(do not open without permission)\personel data\manoj pandey\PHOTO SIGN THUMB\image.jpg" alt="" height="150" width="125"" alt=""> </a>
-  <hr>
-  <img src=" F:\ALL PHOTOS(do not open without permission)\personel data\manoj pandey\PHOTO SIGN THUMB\image.jpg" alt="" height="150" width="125">
+  <img src="image.jpg" alt="" height="150" width="125">
     <h1 style=background-color:powderblue>Manoj Pandey</h1>
 
     <ul>
