--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@ hr {color: Green; border-top:dashed; width:50%; height:5px;}
 <body>
   <p>Hello Dear Code Green</p>
   <a href=""></a>
-  <a href="https://www.google.co.in/"> <img src="\image\image.jpg" alt="" height="150" width="125"" alt=""> </a>
+  <a href="https://www.google.co.in/"> <img src="C:\Users\hp\Desktop\Web Devlopment Course\image\Image.jpg" alt="" height="150" width="125"" alt=""> </a>
   <hr>
-  <img src="\image\image.jpg" alt="" height="150" width="125">
+  <img src="C:\Users\hp\Desktop\Web Devlopment Course\image\Image.jpg" alt="" height="150" width="125">
     <h1 style=background-color:powderblue>Manoj Pandey</h1>
 
     <ul>
