--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ hr {color: Green; border-top:dashed; width:50%; height:5px;}
   <a href=""></a>
   <a href="https://www.google.co.in/"> Google </a>
   <hr>
-  <img src="Image.png" alt="" height="150" width="125">
+  <img src="image\Image.png" alt="" height="150" width="125">
     <h1 style=background-color:powderblue>Manoj Pandey</h1>
 
     <ul>
